fix new parameter bill and Translation